Remove unnecesary "--add-opens" from compiler plugin